--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -36,6 +36,15 @@ jobs:
           NODE_ENV: production
         run: npm run build
 
+      - name: Test SSH Connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DROPLET_HOST }}
+          username: ${{ secrets.DROPLET_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            echo "SSH connection successful!"
+
       - name: Deploy to Digital Ocean Droplet
         uses: appleboy/scp-action@master
         with:
