--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -34,6 +34,18 @@ jobs:
         run: npm test || true
         continue-on-error: true
 
+      - name: Test SSH Connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DROPLET_HOST }}
+          username: ${{ secrets.DROPLET_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            echo "SSH connection successful!"
+            echo "Connected as user: $(whoami)"
+            echo "Current directory: $(pwd)"
+            echo "Hostname: $(hostname)"
+
       - name: Deploy to Digital Ocean Droplet
         uses: appleboy/scp-action@master
         with:
