--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -35,6 +35,15 @@ jobs:
           VITE_API_URL: ${{ secrets.API_URL || 'http://localhost:3007' }}
         run: npm run build
 
+      - name: Test SSH Connection
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.DROPLET_HOST }}
+          username: ${{ secrets.DROPLET_USER }}
+          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          script: |
+            echo "SSH connection successful!"
+
       - name: Deploy to Digital Ocean Droplet
         uses: appleboy/scp-action@master
         with:
