--- a/.github/workflows/deploy-admin.yml
+++ b/.github/workflows/deploy-admin.yml
@@ -2,9 +2,7 @@ name: Deploy Admin Frontend to Digital Ocean
 
 on:
   push:
-    branches:
-      - main
-      - master
+    branches: [ main, master ]
     paths:
       - 'api/admin/**'
       - '.github/workflows/deploy-admin.yml'
@@ -32,36 +30,39 @@ jobs:
       - name: Build production bundle
         working-directory: ./api/admin
         env:
-          REACT_APP_API_URL: ${{ secrets.API_URL || 'http://localhost:3007' }}
+          REACT_APP_API_URL: ${{ secrets.API_URL }}
           NODE_ENV: production
         run: npm run build
 
       - name: Test SSH Connection
-        uses: appleboy/ssh-action@master
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh_key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            echo "SSH connection successful!"
+            echo "SSH Connected Successfully!"
+            whoami
+            pwd
 
-      - name: Deploy to Digital Ocean Droplet
-        uses: appleboy/scp-action@master
+      - name: SCP Deploy build files
+        uses: appleboy/scp-action@v0.1.5
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh_key: ${{ secrets.SSH_PRIVATE_KEY }}
           source: "api/admin/build/*"
           target: "/var/www/tlp-admin"
           strip_components: 3
 
-      - name: Reload nginx
-        uses: appleboy/ssh-action@master
+      - name: Reload Nginx
+        uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          ssh_key: ${{ secrets.SSH_PRIVATE_KEY }}
           script: |
-            sudo nginx -t && sudo systemctl reload nginx
+            sudo nginx -t
+            sudo systemctl reload nginx
 
 
