--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -36,8 +36,23 @@ jobs:
       - name: Setup SSH Key
         run: |
           mkdir -p ~/.ssh
+          # Write the private key - echo preserves newlines from secret
           echo "${{ secrets.SSH_PRIVATE_KEY }}" > deploy_key
           chmod 600 deploy_key
+          # Verify key file format (for debugging)
+          echo "Verifying key file format..."
+          echo "First line: $(head -1 deploy_key)"
+          echo "Last line: $(tail -1 deploy_key)"
+          echo "Line count: $(wc -l < deploy_key)"
+          # Verify it's a valid key format
+          if ! grep -q "BEGIN.*PRIVATE KEY" deploy_key; then
+            echo "ERROR: Key file doesn't contain BEGIN marker"
+            exit 1
+          fi
+          if ! grep -q "END.*PRIVATE KEY" deploy_key; then
+            echo "ERROR: Key file doesn't contain END marker"
+            exit 1
+          fi
           ssh-keyscan -H ${{ secrets.DROPLET_HOST }} >> ~/.ssh/known_hosts 2>/dev/null || true
 
       - name: Test SSH Connection
