--- a/.github/workflows/deploy-api.yml
+++ b/.github/workflows/deploy-api.yml
@@ -94,8 +94,13 @@ jobs:
           ssh-keygen -y -f "$TEMP_KEY" | head -c 100
           echo "..."
           
+          # Save validated key to workspace for SSH actions to use
+          DEPLOY_KEY="${{ github.workspace }}/.github_ssh_key"
+          cp "$TEMP_KEY" "$DEPLOY_KEY"
+          chmod 600 "$DEPLOY_KEY"
           rm -f "$TEMP_KEY"
-          echo "✓ SSH key format is valid"
+          echo "✓ SSH key format is valid and saved for use"
+          echo "SSH_KEY_PATH=$DEPLOY_KEY" >> $GITHUB_ENV
           ssh-keyscan -H ${{ secrets.DROPLET_HOST }} >> $HOME/.ssh/known_hosts 2>/dev/null || true
 
       - name: Test SSH Connection
@@ -103,9 +108,10 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key_path: ${{ env.SSH_KEY_PATH }}
           port: 22
           timeout: 60s
+          debug: true
           script: |
             echo "SSH Connected Successfully!"
             whoami
@@ -116,7 +122,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key_path: ${{ env.SSH_KEY_PATH }}
           source: "api/*"
           target: "/opt/tlp/api"
           strip_components: 1
@@ -126,7 +132,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key_path: ${{ env.SSH_KEY_PATH }}
           source: "deployment/pm2.ecosystem.config.js"
           target: "/opt/tlp"
 
@@ -135,7 +141,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key_path: ${{ env.SSH_KEY_PATH }}
           port: 22
           timeout: 60s
           script: |
@@ -150,7 +156,7 @@ jobs:
         with:
           host: ${{ secrets.DROPLET_HOST }}
           username: ${{ secrets.DROPLET_USER }}
-          key: ${{ secrets.SSH_PRIVATE_KEY }}
+          key_path: ${{ env.SSH_KEY_PATH }}
           port: 22
           timeout: 60s
           script: |
