Fix nginx config structure for IP access

--- a/deployment/nginx.conf
+++ b/deployment/nginx.conf
@@ -24,19 +24,6 @@ server {
     #     return 301 https://$host$request_uri;
     # }
 
-# HTTPS Server (Optional - uncomment when you have SSL certificate)
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-#     server_name your-domain.com;  # Replace with your domain
-
-#     # SSL Configuration (Let's Encrypt)
-#     ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
-#     ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
-#     ssl_protocols TLSv1.2 TLSv1.3;
-#     ssl_ciphers HIGH:!aNULL:!MD5;
-#     ssl_prefer_server_ciphers on;
-
     # Security Headers
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-Content-Type-Options "nosniff" always;
@@ -116,4 +103,19 @@ server {
     error_log /var/log/nginx/tlp-error.log;
 }
 
-
+# HTTPS Server (Optional - uncomment when you have SSL certificate)
+# server {
+#     listen 443 ssl http2;
+#     listen [::]:443 ssl http2;
+#     server_name your-domain.com;  # Replace with your domain
+#
+#     # SSL Configuration (Let's Encrypt)
+#     ssl_certificate /etc/letsencrypt/live/your-domain.com/fullchain.pem;
+#     ssl_certificate_key /etc/letsencrypt/live/your-domain.com/privkey.pem;
+#     ssl_protocols TLSv1.2 TLSv1.3;
+#     ssl_ciphers HIGH:!aNULL:!MD5;
+#     ssl_prefer_server_ciphers on;
+#
+#     # Copy all location blocks from HTTP server above
+#     # (Same configuration as HTTP server)
+# }
